[project]
name = "love-puzzle-v2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.13.0",
    "phonenumbers>=8.13.0",
    "huggingface-hub>=1.15.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
    "sentence-transformers>=3.0.0",
]
